[build-system]
requires = ["setuptools>=61", "pybind11>=2.10.0", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "endf"
dynamic = ["version"]
authors = [
    { name = "Paul Romano", email = "paul.k.romano@gmail.com" },
]
license = { file = "LICENSE" }
description = "Python interface to ENDF-6 files"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "uncertainties",
]

[project.optional-dependencies]
test = ["pytest"]
docs = [
    "sphinx",
    "pydata_sphinx_theme",
    "sphinx_design",
    "sphinx-autodoc-typehints",
]

[project.urls]
"Bug Tracker" = "https://github.com/paulromano/endf-python/issues"
"Source Code" = "https://github.com/paulromano/endf-python"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
